<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>
    <groupId>dtr</groupId>
    <artifactId>dtr-blockchain-solana-sava-program</artifactId>
    <version>1.0</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>
  
    <dependencies>
        <dependency>
            <groupId>dtr</groupId>
            <artifactId>dtr-blockchain-solana-sava-rpc</artifactId>
            <version>1.0</version>
        </dependency>
    </dependencies>
    <repositories>
</repositories>
</project>
